# flappybird-qlearning

./: .gitignore  CMakeLists.txt  README.md  a.out  engine.hpp  test.cpp
src/: a.out  engine.hpp  main.cpp  math.hpp  ql.hpp  test.cpp
src/engine/: atlas.hpp  eg.hpp  gameobject.hpp  math.hpp  screen.hpp  sprite.hpp  timer.hpp  transform.hpp  utils.hpp
src/flappybird/: background.hpp  bird.cpp  bird.hpp  digit.hpp  game.cpp  game.hpp  land.hpp  pipe.hpp
src/model/: ql.hpp
